--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.8",
+    "morgan": "^1.9.1",
     "request": "^2.88.0"
   },
   "devDependencies": {
@@ -17,7 +18,8 @@
     "nodemon": "^1.19.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server",
+    "server": "nodemon server.js"
   },
   "keywords": [
     "node",
