--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "scripts": {
     "start": "node server",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client":"npm start --prefix client",
+    "dev":"concurrently \"npm run server\"\"npm run client\""
   },
   "keywords": [
     "node",
